# mcpcs-rs

./: Cargo.toml  MIGRATION_GUIDE.md  README.md  SSE_HEADERS_USAGE.md  TRANSPORT_COMPARISON.md  context7-config.json  example_config.json  sse-test-config.json
mcpcs-client/: Cargo.toml
mcpcs-client/src/: client.rs  config.rs  main.rs
mcpcs-client/src/client/: connection.rs  connection_api_broken.rs  connection_broken.rs  connection_broken2.rs  connection_failed.rs  connection_old_complex.rs  manager.rs  mod.rs
mcpcs-client/src/client/prompts/: info.rs  list.rs  mod.rs  use_prompt.rs
mcpcs-client/src/client/resources/: download.rs  info.rs  list.rs  mod.rs  read.rs
mcpcs-client/src/client/tools/: call.rs  info.rs  list.rs  mod.rs
mcpcs-client/src/repl/: commands.rs  help.rs  mod.rs
mcpcs-server/: Cargo.toml  README.md  example_prompt.json  example_resource.json  prompt-config.md  resource-config.md
mcpcs-server/src/: main.rs
mcpcs-server/src/prompts/: mod.rs
mcpcs-server/src/repl/: mod.rs
mcpcs-server/src/resources/: mod.rs
mcpcs-server/src/server/: mod.rs  state.rs
mcpcs-server/src/sse/: mod.rs
mcpcs-server/src/ssh/: mod.rs
