[package]
name = "mcpcs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
rmcp = { version = "0.9", features = ["client", "transport-child-process", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest"] }
env_logger = "0.10"
log = "0.4"
colored = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1.0"
http = "1.0"
sse-stream = "0.2"
