[package]
name = "mcpcs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.9", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_core = "0.6"
colored = "2"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
schemars = "1.0"
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
